--- a/access.html
+++ b/access.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>会場案内</title>
-    <link rel="stylesheet" href="CSS/access.css">
+    <link rel="stylesheet" href="css/access.css">
     <!-- Noto Sans JP(日本語) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
