--- a/ticket.html
+++ b/ticket.html
@@ -7,34 +7,44 @@
     <title>チケット情報ページ</title>
     <link rel="stylesheet" href="css/ticket.css">
     <link rel="stylesheet" href="css/all-style.css">
+    <!-- Noto Sans JP(日本語) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+    <!-- Poppins(英語) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
-<header class="site-header">
-    <a href="index.html" class="site-title">Spring Music Festival 2026</a>
-
-    <button class="menu-button" aria-label="メニュー">
-        <span></span>
-        <span></span>
-        <span></span>
-    </button>
-</header>
-<!-- ハンバーガーメニュー展開部分 -->
-<nav class="hamburger-menu" id="hamburgerMenu">
-    <button class="close-button" aria-label="閉じる">✕</button>
-    <ul>
-        <li><a href="timetable.html">タイムテーブル</a></li>
-        <li><a href="artists/index.html">出演者一覧</a></li>
-        <li><a href="access.html">会場案内</a></li>
-        <li><a href="ticket.html">チケット情報</a></li>
-        <li><a href="goods.html">グッズ</a></li>
-        <li><a href="guide.html">来場者ガイド</a></li>
-        <li><a href="faq.html">よくある質問</a></li>
-        <li><a href="contact.html">お問い合わせ</a></li>
-        <li><a href="privacy.html">プライバシーポリシー</a></li>
-    </ul>
-</nav>
-
 <body>
+    <header class="site-header">
+        <a href="index.html" class="site-title">Spring Music Festival 2026</a>
+
+        <button class="menu-button" aria-label="メニュー">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+    </header>
+    <!-- ハンバーガーメニュー展開部分 -->
+    <nav class="hamburger-menu" id="hamburgerMenu">
+        <button class="close-button" aria-label="閉じる">✕</button>
+        <ul>
+            <li><a href="timetable.html">タイムテーブル</a></li>
+            <li><a href="artists/index.html">出演者一覧</a></li>
+            <li><a href="access.html">会場案内</a></li>
+            <li><a href="ticket.html">チケット情報</a></li>
+            <li><a href="goods.html">グッズ</a></li>
+            <li><a href="guide.html">来場者ガイド</a></li>
+            <li><a href="faq.html">よくある質問</a></li>
+            <li><a href="contact.html">お問い合わせ</a></li>
+            <li><a href="privacy.html">プライバシーポリシー</a></li>
+        </ul>
+    </nav>
+
     <div class="page-title">
         <h1>チケット情報</h1>
         <hr class="custom-hr">
